zwischenstand 13.Feb.23